--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,8 @@
 	    </div>
 	  </div>
 	</div>
-	<div id="map"></div>
+	<div class="container" id="mapLeft"></div>
+        <div class="container" id="mapRight"></div>
       </div>
     </div>
     <script type="text/javascript" src="vis.js"></script>
