Add Pinn's changes to sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -19,33 +19,15 @@
 	  <div class="controls">
             <h1>Brexit Data</h1>
             
-            <h4>Carrier</h4>
+            <h4>Left: Brexit Vote</h4>
             <select id="carrier">
-              <option value="all" selected>Pigeons</option>
+              <option value="all" selected>Leave</option>
             </select>
-            
-            <h4>Day of Week</h4>
-            <div class="checkbox">
-              <label><input id="monday" type="checkbox" checked> Charlie</label>
-            </div>
-            <div class="checkbox">
-              <label><input id="tuesday" type="checkbox" checked> Peter-Michael</label>
-            </div>
-            <div class="checkbox">
-              <label><input id="wednesday" type="checkbox" checked> Ursula</label>
-            </div>
-            <div class="checkbox">
-              <label><input id="thursday" type="checkbox" checked> Sam</label>
-            </div>
-            <div class="checkbox">
-              <label><input id="friday" type="checkbox" checked> Mr. Stone</label>
-            </div>
-            <div class="checkbox">
-              <label><input id="saturday" type="checkbox" checked> Anya</label>
-            </div>
-            <div class="checkbox">
-              <label><input id="sunday" type="checkbox" checked> Titus</label>
-	    </div>
+
+            <h4>Right: Demographic</h4>
+            <select id="carrier">
+              <option value="all" selected>Population</option>
+            </select>
 	  </div>
 	</div>
 	<div class="container" id="mapLeft"></div>
