Reorganize ordering of sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,14 @@
 	  <div class="controls">
             <h1>Brexit Data</h1>
             
-            <h4>Left: Brexit Vote</h4>
-            <select id="carrier">
-              <option value="all" selected>Leave</option>
-            </select>
-
-            <h4>Right: Demographic</h4>
+            <h4>Left: Demographic</h4>
             <select id="carrier">
               <option value="all" selected>Population</option>
+            </select>
+
+            <h4>Right: Brexit Vote</h4>
+            <select id="carrier">
+              <option value="all" selected>Leave</option>
             </select>
 	  </div>
 	</div>
