Do initial work on getting demographic data in

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,12 @@
               <option value="all" selected>Population</option>
             </select>
 
+            <h5>Subcategory</h5>
+            <select id="subcategory">
+              <option value="temp" selected>Temp</option>
+              <option value="Charlie">Fuck</option>
+            </select>
+
             <h4>Right: Brexit Vote</h4>
             <select id="carrier">
               <option value="all" selected>Leave</option>
