Get basic demographic coloring working with subcategory selection

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,9 @@
             <h1>Brexit Data</h1>
             
             <h4>Left: Demographic</h4>
-            <select id="carrier">
+            <select id="demographic">
               <option value="all" selected>Population</option>
+              <option value="cob">Country of Birth</option>
             </select>
 
             <h5>Subcategory</h5>
