generalized data set loading and configuration

--- a/src/index.html
+++ b/src/index.html
@@ -20,20 +20,15 @@
             <h1>Brexit Data</h1>
             
             <h4>Left: Demographic</h4>
-            <select id="demographic">
-              <option value="all" selected>Population</option>
-              <option value="cob">Country of Birth</option>
-            </select>
+            <select id="demographic"></select>
 
             <h5>Subcategory</h5>
-            <select id="subcategory">
-              <option value="temp" selected>Temp</option>
-              <option value="Charlie">Fuck</option>
-            </select>
+            <select id="subcategory"></select>
 
             <h4>Right: Brexit Vote</h4>
-            <select id="carrier">
+            <select id="demographic">
               <option value="all" selected>Leave</option>
+              <option value="all" selected>temp</option>
             </select>
 	  </div>
 	</div>
