Add rest of demographic code to be able to be selected

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,10 @@
             <select id="subcategory"></select>
 
             <h4>Right: Brexit Vote</h4>
-            <select id="demographic">
-              <option value="all" selected>Leave</option>
-              <option value="all" selected>temp</option>
+            <select id="brexit">
+              <option value="all" selected>Please Select</option>
+              <option value="Leave">Leave</option>
+              <option value="Remain">Remain</option>
             </select>
 	  </div>
 	</div>
