--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,14 @@
               <option value="Leave">Leave</option>
               <option value="Remain">Remain</option>
             </select>
+
+	    <input type="checkbox" id="showBrexit">
 	  </div>
 	</div>
-	<div class="container" id="mapLeft"></div>
-        <div class="container" id="mapRight"></div>
+	<div id="maps">
+	  <div class="container" id="mapLeft"></div>
+          <div class="container" id="mapRight"></div>
+	</div>
       </div>
     </div>
     <script type="text/javascript" src="vis.js"></script>
