--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="full-map-container">
       <div class="row">
-	<div id="control-bar" class="col-sm-3 col-md-3 col-lg-2 sidebar">
+	<div id="control-bar" class="sidebar">
 	  <div class="controls">
             <h1>Brexit Data</h1>
             
