--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="crossfilter.min.js"></script>
     <script type="text/javascript"
             src="https://d3js.org/d3.v4.min.js"></script>
@@ -36,9 +37,9 @@
 	  </div>
 	</div>
       </div>
-      <div id="maps">
-	<div class="container" id="mapLeft"></div>
-        <div class="container" id="mapRight"></div>
+      <div class="row" id="maps">
+	  <div class="col-lg-6" id="mapLeft"></div>
+          <div class="col-lg-6" id="mapRight"></div>
       </div>
     </div>
     <script type="text/javascript" src="vis.js"></script>
