--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
       <div class="row" id="maps">
 	  <div class="col-lg-6" id="mapLeft"></div>
           <div class="col-lg-6" id="mapRight"></div>
+          <div id="lad-statistics"></div>
       </div>
     </div>
     <script type="text/javascript" src="vis.js"></script>
