Fully add barchart functionality and brexit vote split on click

--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,8 @@
 	      <li>
 		<h2>Brexit Vote Breakdown</h2>
 		<select id="brexit">
-		  <option value="all" selected>Please Select</option>
 		  <option value="Leave">Leave</option>
-		  <option value="Remain">Remain</option>
+		  <option value="Remain" selected>Remain</option>
 		</select>
 	      </li>
 	  </div>
