--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>BREXIT data</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="magnific-popup.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="jquery.magnific-popup.js"></script>
     <script src="crossfilter.min.js"></script>
     <script type="text/javascript"
             src="https://d3js.org/d3.v4.min.js"></script>
@@ -24,10 +25,10 @@
 	      <h1>Brexit Data</h1>
 	    </div>
 	    <div class="col-lg-1 center-block text-center align-self-center">
-	      <a href="#about">About</a>
+	      <a href="#about" class="about-popup">About</a>
 	    </div>
 	    <div class="col-lg-1 center-block text-center align-self-center">
-	      <a href="#glossary">Glossary</a>
+	      <a href="#glossary" class="glossary-popup">Glossary</a>
 	    </div>
 	  </div>
 	  <div class="row controls">
@@ -64,20 +65,15 @@
 	</div>
 	<script type="text/javascript" src="vis.js"></script>
     </div>
+    <!-- #about popup -->
+    <div id="about" class="white-popup mfp-hide">
+      <img src="../data/images/alpaca_guide.png" height="800" width="800">
+    </div>
+    <!-- #glossary popup -->
+    <div id="glossary" class="white-popup mfp-hide">
+      <p> ugh, work please..................................................................
+      ......................................................................................</p>
+      <img src="../data/images/alpaca_bye.png" height="800" width="800">
+    </div>
   </body>
 </html>
-<!--
- <ul>
-	    <li>
-	    
-	    </li>
-	    <li>
-	      <div class="help">
-		<ul>
-		  <li><a href="#about">About</a></li>
-		  <li><a href="#glossary">Glossary</a></li>
-		</ul>
-	      </div>
-	    </li>
-	  </ul>
- -->
