--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>BREXIT data</title>
+    <title>BREXIT v. Demographic Data</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="magnific-popup.css">
@@ -24,10 +24,10 @@
 	    <div class="col-lg-8 title">
 	      <h1>Brexit Data</h1>
 	    </div>
-	    <div class="col-lg-1 center-block text-center align-self-center">
+	    <div class="col-lg-1 center-block text-center align-self-center tab-help">
 	      <a href="#about" class="about-popup">About</a>
 	    </div>
-	    <div class="col-lg-1 center-block text-center align-self-center">
+	    <div class="col-lg-1 center-block text-center align-self-center tab-help">
 	      <a href="#glossary" class="glossary-popup">Glossary</a>
 	    </div>
 	  </div>
