Fix tab text not appearing

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,8 @@
 	    <div class="col-lg-1 center-block text-center align-self-center tab-help">
 	      <a href="#about" class="about-popup">About</a>
 	    </div>
-	    <div class="col-lg-1 center-block text-center align-self-center tab-help">
+	    <div class="col-lg-1 center-block text-center align-self-center
+                        tab-help">
 	      <a href="#glossary" class="glossary-popup">Glossary</a>
 	    </div>
 	  </div>
