added citation for magnific

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="magnific-popup.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Credits to magnific-popup at http://dimsemenov.com/plugins/magnific-popup/ for the glossary and about pages, and their corresponding js and css files. -->
     <script src="jquery.magnific-popup.js"></script>
     <script src="crossfilter.min.js"></script>
     <script type="text/javascript"
