--- a/src/index.html
+++ b/src/index.html
@@ -78,13 +78,48 @@
 	  </div>
 	  <div class="row about-body">
 	    <p>
-	      <!--What is this visualization?-->
+	      On June 23, 2016 the United Kingdom voted on whether or not
+              to remain as a member state of the European Union. The
+              majority of the population voted to leave the EU. This
+              visualization attempts help explain why this was the case
+              through looking at a variety of demographic data. It is the
+              goal of this visualization to identify correlations between
+              demographic groups, such as ethnic groups, religious groups,
+              and even religious groups and how the districts with these
+              properties voted in reference to the EU referendum.
 	    </p>
 	    <p>
-	      <!--Features-->
+	      A variety have been included for your visual pleasure. On the
+              left is a map of England proper which will display all of the
+              demographic information you could desire, and on the right is
+              another map of England proper displaying the voting breakdown
+              per district. You can select 13 different demographic
+              statistics and further narrow your search by selecting one of
+              many subcategories of your chosen demographic. We have
+              included the ability for you to hover your mouse cursor over
+              the districts on the left map to see the name of the district
+              along with the relevant percentage that that district is of
+              your chosen demographic. For more detailed information you
+              can click using your mouse cursor on a district to zoom in
+              and view a bar chart of all the statistics for that district
+              of the primary demographic, alongside the voting
+              breakdown.
 	    </p>
 	    <p>
-	      <!--How to use this visualization-->
+	      To effectively use this Brexit Demographic visualization, we will outline how one might extract information from the visualization. Say, for example, you would like to see the distribution of the population of Level 3 qualifications and up citizens and compare their distribution to the country's overall voting to leave the EU.
+	      <ol>
+		<li>
+		  Select the <i>Qualifications and Students</i> option under the <i>Census Demographic Category</i>.
+		</li>
+		<li>select the <i>Highest level of qualification: Level 3 qualifications</i> under <i>Demographic Subcategory</i>.
+		</li>
+		<li>
+		  Choosing the demographic subcategory will update the map on the left to accomodate for the chosen variable you would like to display, changing the color of the districts and legends.
+		</li>
+		<li>On the other side, select <i>Leave</i> from the <i>Brexit Vote Breakdown</i> selection to update the right hand map with the approrpiate colors.
+		</li>
+	      </ol>
+	      Now you have displayed the appropriate statistics to the visualization engine. To recover individual district statistics, simply hover over the chosen district with the mouse and a tooltip will appear, displaying the desired value. If you would like a more in-depth categorization of the a particular district, simply click on the desired district. The visualization will zoom-in to the desired district, and a quick bar chart summary and brexit comparison vote will appear to cover the right hand map. Clicking the district will remove the statistics and return the visualization to normal.
 	    </p>
 	  </div>
 	</div>
