Start adding GNU 3 License

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,20 @@
+<!--This file is part of The Brexit Demographic Visualization.
+
+    The Brexit Demographic Visualization is free software: you can
+    redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    The Brexit Demographic Visualization is distributed in the hope that it
+    will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with The Brexit Demographic Visualization. If not, see
+    <http://www.gnu.org/licenses/>. -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -79,9 +96,33 @@
 	  <div class="row about-body">
 	    <p>
 	      <!--What is this visualization?-->
+              On June 23, 2016 the United Kingdom voted on whether or not
+              to remain as a member state of the European Union. The
+              majority of the population voted to leave the EU. This
+              visualization attempts help explain why this was the case
+              through looking at a variety of demographic data. It is the
+              goal of this visualization to identify correlations between
+              demographic groups, such as ethnic groups, religious groups,
+              and even religious groups and how the districts with these
+              properties voted in reference to the EU referendum.
 	    </p>
 	    <p>
 	      <!--Features-->
+              A variety have been included for your visual pleasure. On the
+              left is a map of England proper which will display all of the
+              demographic information you could desire, and on the right is
+              another map of England proper displaying the voting breakdown
+              per district. You can select 13 different demographic
+              statistics and further narrow your search by selecting one of
+              many subcategories of your chosen demographic. We have
+              included the ability for you to hover your mouse cursor over
+              the districts on the left map to see the name of the district
+              along with the relevant percentage that that district is of
+              your chosen demographic. For more detailed information you
+              can click using your mouse cursor on a district to zoom in
+              and view a bar chart of all the statistics for that district
+              of the primary demographic, alongside the voting
+              breakdown. 
 	    </p>
 	    <p>
 	      <!--How to use this visualization-->
